# EASYPLOTPY

./: .gitignore  001-0.md  001-1.md  001-10.md  001-11.md  001-2.md  001-3.md  001-4.md  001-5.md  001-6.md  001-7.md  001-8.md  001-9.md  001-9x.md  002-0.md  003-0.md  Gemfile  _config.yml  bar_chart.md  charts.md  contour_chart.md  documentador.py  heatmap_chart.md  histogram_chart.md  index.md  join_hist_chart.md  license.md  line_chart.md  log.md  multiple_lines_chart.md  pizza_chart.md  pyproject.toml  radar_chart  radar_chart.md  readme-pypi.md  regplot_chart.md  scatter_chart.md  scatter_line_chart.md  scatter_mesh_grid.md  smooth_line.md  (+2 more)
Examples/: 001- example histogram.ipynb  002 - example line chart.ipynb  003 - example scatter.ipynb  004 - example bar.ipynb  005 - example pizza.ipynb  006 - example scatter line chart.ipynb  006-RADAR.ipynb  007 - example heatmap.ipynb  008 - example treemap.ipynb  009-JOIN_HISTOGRAM.ipynb  010-MULTIPLE_LINES.ipynb  011-REGPLOT.ipynb  013-CONTOUR_CHART.ipynb  014-exemple scatter_mesh_grid.ipynb  015-exemple smooth_line.ipynb
docs/: bar_chart.md  convert_si_to_inches_in_chart_size.md  heatmap_chart.md  histogram_chart.md  join_hist_chart.md  keys_to_lower.md  line_chart.md  multiple_lines_chart.md  pizza_chart.md  radar_chart.md  regplot_chart.md  save_chart_in_folder.md  scatter_chart.md  scatter_line_chart.md  treemap_chart.md
easyplot_toolbox/: __init__.py  easyplot.py
em construção/: 001-7.md  001-8.md
notebooks/: 009-TREEMAP_CHART.ipynb  010-JOIN_HIST_CHART.ipynb  011-MULTI_AXIS_LINE_CHART.ipynb
