[tool.poetry]
name = "easyplot-toolbox"
version = "2.0.1"
description = ""
authors = ["wmpjrufg <wanderlei_junior@ufcat.edu.br>", "nerodrakar <luiz_rezio@discente.ufcat.edu.br>", "mateussilva <silva_mateus@discente.ufcat.edu.br>", "nilsonjorge <nilsonjorge@discente.ufcat.edu.br>", "sfrancisco <sergio@ufcat.edu.br>"]
readme = "readme-pypi.md"

[tool.poetry.dependencies]
python = ">3.8"
matplotlib = ">3.8.4"
pandas = ">2.2.2"
seaborn = ">0.13.2"
joypy = ">0.2.6"
squarify = ">0.4.3"
numpy = ">1.23"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
